--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-library",
+  "name": "@gasparnd/ui-library",
   "version": "1.0.0",
   "main": "dist/index.ts",
   "private": false,
