--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@gasparnd/ui-library",
   "version": "1.0.0",
-  "main": "dist/index.ts",
+  "main": "dist",
   "private": false,
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "repository": {
     "type": "git",
