--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gasparnd/ui-library",
-  "version": "1.0.1",
-  "main": "dist",
+  "version": "1.0.2",
+  "main": "dist/index.js",
   "private": false,
   "files": [
     "dist",
