--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__"
   },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "dependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/node": "^7.16.0",
@@ -38,8 +42,6 @@
     "image-webpack-loader": "^8.0.1",
     "node-sass": "^6.0.1",
     "path": "^0.12.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.4.4",
