--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gasparnd/ui-library",
-  "version": "1.0.3",
-  "main": "dist/index.js",
+  "version": "1.0.4",
+  "main": "dist/index.ts",
   "private": false,
   "files": [
     "dist",
