--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@gasparnd/ui-library",
-  "version": "1.0.5",
-  "main": "dist/index.ts",
+  "version": "1.0.6",
+  "main": "./lib/cjs/dist/index.js",
+  "module": "./lib/esm/dist/index.js",
+  "types": "./lib/esm/index.d.ts",
   "private": false,
   "files": [
     "dist",
+    "lib",
     "README.md"
   ],
   "repository": {
@@ -17,6 +20,9 @@
     "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "build-storybook": "build-storybook",
     "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__"
@@ -44,7 +50,6 @@
     "path": "^0.12.7",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "typescript": "^4.4.4",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
@@ -55,6 +60,7 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
-    "ts-loader": "^9.2.6"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4"
   }
 }
